# AITown

./: .gitignore  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES.md  THIRD_PARTY_LICENSES.md  main.py  pyproject.toml  requirements-dev.txt
aitown/: __init__.py  agent.py  assets.py  audio.py  bootstrap.py  campaign.py  config.py  director.py  game.py  models.py  paths.py  persistence.py  progression.py  settings.py  world.py
docs/: AI小镇_总体方案.md  ART_DIRECTION_PLAN.md  EXTERNAL_ASSET_REVIEW_2026_02.md  GAME_OVERVIEW.md  MVP_CHECKLIST.md  MVP执行清单.md  PERFORMANCE_PRESET_GUIDE.md  STEAM_RELEASE_CHECKLIST.md  Steam发布清单.md  交互美术与人物建模深化方案_v3.md  外部素材仓库评估_2026-02.md  高配笔记本_性能与画质档位.md
scripts/: build_windows.ps1  license_guard.py  release_check.py  smoke_test.py
steam/: README.md  app_build_aitown.vdf  depot_build_aitown_windows.vdf
tests/: test_campaign_assist.py  test_core.py  test_license_guard.py  test_playability.py
